--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -1,2 +1,19 @@
 lecm-stmeditor_model.association.lecm-stmeditor_transitionStatus.title=Status
+lecm-stmeditor_model.property.lecm-stmeditor_workflowId.title=Workflow ID
 lecm-stmeditor_model.property.lecm-stmeditor_transitionExpression.title=Expression
+lecm-stmeditor_model.property.lecm-stmeditor_userTransitionLabel.title=Transition Name
+lecm-stmeditor_model.property.lecm-stmeditor_userTransitionLabel.description=Transition Name
+lecm-stmeditor_model.property.lecm-stmeditor_transitionWorkflowLabel.title=Transition Name
+
+lecm-stmeditor_model.property.lecm-stmeditor_inputWorkflowToVariable.title=to Variable
+lecm-stmeditor_model.property.lecm-stmeditor_inputWorkflowVariableType.title=Type
+lecm-stmeditor_model.property.lecm-stmeditor_inputWorkflowVariableValue.title=Value
+lecm-stmeditor_model.property.lecm-stmeditor_outputWorkflowToVariable.title=Variable
+lecm-stmeditor_model.property.lecm-stmeditor_outputWorkflowVariableType.title=Type
+lecm-stmeditor_model.property.lecm-stmeditor_outputWorkflowVariableValue.title=Value
+lecm-stmeditor_model.property.lecm-stmeditor_transitionWorkflowId.title=Workflow
+lecm-stmeditor_model.property.lecm-stmeditor_workflowLabel.title=Title
+lecm-stmeditor_model.property.lecm-stmeditor_assignee.title=Assignee
+
+listconstraint.lecm-stmeditor_variableSettingType.VARIABLE=Variable
+listconstraint.lecm-stmeditor_variableSettingType.VALUE=Value
