--- a/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
+++ b/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
@@ -6,3 +6,10 @@ statemachine.editor.machineproperties=Properties
 statemachine.execution.start=Actions for start State
 statemachine.execution.take=User Actions
 statemachine.execution.end=Actions for end State
+
+statemachine.editor.form.label.userTransition=Transitions
+statemachine.editor.form.label.transitionWorkflow=Transitions with workflow start
+statemachine.editor.form.label.inputWorkflowData=Input Data
+statemachine.editor.form.label.outputWorkflowData=Output Data
+statemachine.editor.form.label.workflows=Workflows
+statemachine.editor.form.label.expressions=Expressions
