--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -14,6 +14,7 @@ lecm-stmeditor_model.property.lecm-stmeditor_outputWorkflowVariableValue.title=V
 lecm-stmeditor_model.property.lecm-stmeditor_transitionWorkflowId.title=Workflow
 lecm-stmeditor_model.property.lecm-stmeditor_workflowLabel.title=Title
 lecm-stmeditor_model.property.lecm-stmeditor_assignee.title=Assignee
+lecm-stmeditor_model.property.lecm-stmeditor_startStatus.title=Start Status
 
 listconstraint.lecm-stmeditor_variableSettingType.VARIABLE=Variable
 listconstraint.lecm-stmeditor_variableSettingType.VALUE=Value
