Версионность. При наведении на строку в dataGrid показывается версия строки.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@606 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.staff-list.grid.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.staff-list.grid.get.properties
@@ -22,6 +22,7 @@ message.delete.success=Item was deleted
 message.delete.failure=Could not delete item
 message.duplicate.success=Item was duplicated
 message.duplicate.failure=Could not duplicate item
+message.version = Last Version
 
 ## Drop-down Menus
 menu.select=Select
