--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.tree-and-grid.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.tree-and-grid.get.properties
@@ -22,6 +22,7 @@ message.delete.success=Item was deleted
 message.delete.failure=Could not delete item
 message.duplicate.success=Item was duplicated
 message.duplicate.failure=Could not duplicate item
+message.version = Last Version
 
 ## Drop-down Menus
 menu.select=Select
