--- a/lecm-statemachine-editor/repo/pom.xml
+++ b/lecm-statemachine-editor/repo/pom.xml
@@ -53,7 +53,14 @@
 			<groupId>org.springframework.extensions.surf</groupId>
 			<artifactId>spring-webscripts</artifactId>
 		</dependency>
-        <!-- Don't add here amp dependencies as it will break amp packaging -->
+		<dependency>
+			<groupId>ru.it.lecm.base</groupId>
+			<artifactId>base-repo</artifactId>
+			<version>${platform.version}</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/../../lecm-base/repo/target/base-repo-${platform.version}/lib/base-repo-${platform.version}.jar</systemPath>
+		</dependency>
+		<!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
