Добавлены кнопки управления сотрудником для штатного расписания
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@610 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.staff-list.grid.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.staff-list.grid.get.properties
@@ -42,7 +42,8 @@ actions.duplicate-row=Duplicate
 actions.delete-row=Delete
 actions.version=Preview Version
 actions.more=More
-
+actions.employeeAdd=Add Employee
+actions.employeeDelete=Delete Employee
 # Search
 button.search=Search
 button.ex_search=Extend Search
