--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid.get.properties
@@ -16,7 +16,7 @@ message.delete.success=Item was deleted
 message.delete.failure=Could not delete item
 message.duplicate.success=Item was duplicated
 message.duplicate.failure=Could not duplicate item
-message.version = Last Version
+message.version = Version:
 
 ## Drop-down Menus
 menu.select=Select
