--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -15,3 +15,11 @@ info.main=Information
 info.more=More
 info.common-info=Common info
 info.personal-info=Personal info
+
+message.employee.add.success=Employee successfully added
+message.employee.add.failure=Employee add failed
+message.employee.delete.success=Employee successfully deleted
+message.employee.delete.failure=Employee delete failed
+
+message.employee.delete.title=Dismiss employee
+message.employee.delete.prompt=Dismiss Employee {0} from position {1}?
