ALF-140  - Включение участника в Рабочую группу.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@617 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -23,3 +23,8 @@ message.employee.delete.failure=Employee delete failed
 
 message.employee.delete.title=Dismiss employee
 message.employee.delete.prompt=Dismiss Employee {0} from position {1}?
+
+actions.addEmployee=Designate to the position
+actions.deleteEmployee=Remove from the position
+
+button.employee.remove=Remove
