--- a/server/alfresco/src/main/resources/log4j.properties
+++ b/server/alfresco/src/main/resources/log4j.properties
@@ -88,7 +88,8 @@ log4j.logger.org.alfresco.repo.node.db.hibernate.HibernateNodeDaoServiceImpl=war
 #log4j.logger.org.alfresco.repo.cache.EhCacheTracerJob=debug
 #log4j.logger.org.alfresco.repo.search.Indexer=debug
 #log4j.logger.org.alfresco.repo.workflow=info
-#log4j.logger.org.alfresco.repo.jscript=DEBUG
+log4j.logger.org.alfresco.repo.jscript=DEBUG
+log4j.logger.org.alfresco.repo.jscript.ScriptLogger=DEBUG
 log4j.logger.org.alfresco.repo.jscript.AlfrescoRhinoScriptDebugger=off
 
 # CIFS server debugging
