--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <id>alfresco-activiti</id>
             <url>https://maven.alfresco.com/nexus/content/repositories/activiti-releases/</url>
         </repository>
+		<repository>
+			<id>maven2-repository.dev.java.net</id>
+			<name>Java.net Repository for Maven</name>
+			<url>http://download.java.net/maven/2/</url>
+			<layout>default</layout>
+		</repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
@@ -204,6 +210,12 @@
                 <artifactId>javacsv</artifactId>
                 <version>2.0</version>
             </dependency>
+            <dependency>
+    			<groupId>javax.transaction</groupId>
+	    		<artifactId>jta</artifactId>
+				<version>1.0.1B</version>
+				<scope>provided</scope>
+		    </dependency>
         </dependencies>
     </dependencyManagement>
 
