ALF-140 - Включение участника в Рабочую группу.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@643 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -18,11 +18,11 @@ info.personal-info=Personal info
 
 message.employee.add.success=Employee successfully added
 message.employee.add.failure=Employee add failed
-message.employee.delete.success=Employee successfully deleted
-message.employee.delete.failure=Employee delete failed
+message.employee.position.delete.success=Employee successfully deleted
+message.employee.position.delete.failure=Employee delete failed
 
-message.employee.delete.title=Dismiss employee
-message.employee.delete.prompt=Dismiss Employee {0} from position {1}?
+message.employee.position.delete.title=Dismiss employee
+message.employee.position.delete.prompt=Dismiss Employee {0} from position {1}?
 
 actions.addEmployee=Designate to the position
 actions.deleteEmployee=Remove from the position
