добавил в модель оргструктуры тип данных "бизнес роль" как линейный справочник
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@644 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/repo/src/main/config/messages/orgstructure.properties
+++ b/lecm-orgstructure/repo/src/main/config/messages/orgstructure.properties
@@ -154,15 +154,18 @@ lecm-orgstr_organizationStructure.property.lecm-orgstr_workRole-description.desc
 lecm-orgstr-docType_dictionaryDocTypes.type.lecm-orgstr-docType_documentType.title=Doc Type
 lecm-orgstr-docType_dictionaryDocTypes.type.lecm-orgstr-docType_documentType.description=Doc Type
 
-
-
-
-
-
-
-
-
-
-
-
-
+#lecm-orgstr:business-role
+lecm-orgstr_organizationStructure.type.business-role.title=Business role
+lecm-orgstr_organizationStructure.type.business-role.description=Element of business role dictionary
+#lecm-orgstr:business-role-description
+lecm-orgstr_organizationStructure.property.lecm-orgstr_business-role-description.title=Business role description
+lecm-orgstr_organizationStructure.property.lecm-orgstr_business-role-description.description=The description of business role
+#lecm-orgstr:business-role-employee-assoc
+lecm-orgstr_organizationStructure.association.lecm-orgstr_business-role-employee-assoc.title=Employees
+lecm-orgstr_organizationStructure.association.lecm-orgstr_business-role-employee-assoc.description=Link to employees
+#lecm-orgstr:business-role-organization-element-assoc
+lecm-orgstr_organizationStructure.association.lecm-orgstr_business-role-organization-element-assoc.title=Organization elements
+lecm-orgstr_organizationStructure.association.lecm-orgstr_business-role-organization-element-assoc.description=Link to organization elements
+#lecm-orgstr:business-role-organization-element-member-assoc
+lecm-orgstr_organizationStructure.association.lecm-orgstr_business-role-organization-element-member-assoc.title=Organization element members
+lecm-orgstr_organizationStructure.association.lecm-orgstr_business-role-organization-element-member-assoc.description=Link to organization element members
