заготовка под страницу настройки бизнес ролей в оргструктуре
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@645 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -5,6 +5,7 @@ page.org-roles=Roles
 page.org-employees=Employees
 page.staff-list=Staff List
 page.work-groups=Working Groups
+page.businessRoles=Business roles
 page.orgstructure.filter.label=(content filtered)
 
 search-block=Search
