--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.menu.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.menu.get.properties
@@ -5,3 +5,4 @@ lecm.orgstructure.work-groups.btn=Working Groups
 lecm.orgstructure.positions.btn=Positions
 lecm.orgstructure.roles.btn=Roles
 lecm.orgstructure.organization.btn=Organization Profile
+lecm.orgstructure.businessRoles.btn=Business roles
