[+] ALF-188. Отрисовка машины состояний
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@649 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/pom.xml
+++ b/lecm-statemachine-editor/repo/pom.xml
@@ -60,6 +60,13 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/../../lecm-base/repo/target/base-repo-${platform.version}/lib/base-repo-${platform.version}.jar</systemPath>
 		</dependency>
+		<dependency>
+			<groupId>com.mxgraph</groupId>
+			<artifactId>jgraphx</artifactId>
+			<version>1.10.4.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/jgraphx.jar</systemPath>
+		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
