Добавлены колонки "Отдел" и "Должность" с переводами в оргструктуру -> сотрудники
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@666 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -29,3 +29,6 @@ actions.addEmployee=Designate to the position
 actions.deleteEmployee=Remove from the position
 
 button.employee.remove=Remove
+
+lecm-orgstr_employee-main-unit=Unit
+lecm-orgstr_employee-main-position=Position
