[+]добавлена опция для скрытия колонки с действиями в гриде [+]Добавлена возможность указывать formId для получения списка колонок в гриде [~]доработки в Api [+]добавлен флаг, при указании которого будут удаляться targetAssocs [+]ALF-130 - Просмотр списка должностей в карточке сотрудника [+]ALF-141 - Просмотр Рабочих групп, в которых участвует Сотрудник.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@670 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -16,6 +16,8 @@ info.main=Information
 info.more=More
 info.common-info=Common info
 info.personal-info=Personal info
+info.personal-positions=Employee Positions
+info.personal-groups=Employee Groups
 
 message.employee.add.success=Employee successfully added
 message.employee.add.failure=Employee add failed
@@ -32,3 +34,5 @@ button.employee.remove=Remove
 
 lecm-orgstr_employee-main-unit=Unit
 lecm-orgstr_employee-main-position=Position
+lecm-orgstr_workforce-group=Work Group
+lecm-orgstr_staff-unit=Unit
