view form для списка делегирования
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@671 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/delegation/list/delegation-list.get.properties
+++ b/lecm-delegation/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/delegation/list/delegation-list.get.properties
@@ -34,3 +34,5 @@ actions.delete=Delete procuracy
 actions.revoke=Revoke procuracy
 actions.propogate=Propogate procuracy
 actions.more=More actions
+
+logicecm.dictionary.view=View
