Добавлены ссылки на ассоциации в datagrid-ах оргструктуры
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@674 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -36,3 +36,5 @@ lecm-orgstr_employee-main-unit=Unit
 lecm-orgstr_employee-main-position=Position
 lecm-orgstr_workforce-group=Work Group
 lecm-orgstr_staff-unit=Unit
+lecm-orgstr_boss=Boss
+lecm-orgstr_employee=Employee
