--- a/lecm-delegation/repo/pom.xml
+++ b/lecm-delegation/repo/pom.xml
@@ -14,7 +14,8 @@
 	<name>${project.artifactId}-${project.version}</name>
 	<description>this is delegation repo module</description>
 	<properties>
-		<module.log.level>debug</module.log.level>
+		<module.log.level>info</module.log.level>
+		<alfproject.version>4.0.c</alfproject.version>
 	</properties>
 	<!--
 		need to list these as a provided so that Maven doesn't download them
@@ -28,10 +29,21 @@
 		<dependency>
 			<groupId>org.alfresco</groupId>
 			<artifactId>alfresco-repository</artifactId>
-		</dependency>
+		</dependency>	
 		<dependency>
 			<groupId>org.alfresco</groupId>
 			<artifactId>alfresco-data-model</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>acegisecurity</groupId>
+			<artifactId>acegi-security</artifactId>
+			<version>0.8.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>3.1.0.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.extensions.surf</groupId>
@@ -45,6 +57,7 @@
 		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
+
 	<!--
 		The scm is required for the buildnumber-maven-plugin which is required
 		for AMP version numbering
