Добавлены действие "Сделать должность руководящей" в штатное расписание
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@705 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -27,10 +27,18 @@ message.employee.position.delete.failure=Employee delete failed
 message.employee.position.delete.title=Dismiss employee
 message.employee.position.delete.prompt=Dismiss Employee {0} from position {1}?
 
+message.position.boss.success=Make boss successfully
+message.position.boss.failure=Make boss failed
+
+message.position.boss.title=Make boss
+message.position.boss.prompt=Make boss position {0}?
+
 actions.addEmployee=Designate to the position
 actions.deleteEmployee=Remove from the position
+actions.makeBoss=Make boss
 
 button.employee.remove=Remove
+button.position.makeBoss=Make
 
 lecm-orgstr_employee-main-unit=Unit
 lecm-orgstr_employee-main-position=Position
