[~] ALF-184. Формы настройки действий – доработка и переработка Изменена главная страница
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@714 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -14,5 +14,21 @@ lecm-stmeditor_model.property.lecm-stmeditor_workflowLabel.title=Title
 lecm-stmeditor_model.property.lecm-stmeditor_assignee.title=Assignee
 lecm-stmeditor_model.property.lecm-stmeditor_startStatus.title=Start Status
 
+
+#Status Properties
+lecm-stmeditor_model.property.lecm-stmeditor_takeFinishStateWithTransitionUser.title=Status Transition
+lecm-stmeditor_model.property.lecm-stmeditor_takeFinishStateWithTransitionWorkflow.title=Status Transition with Workflow Start
+lecm-stmeditor_model.property.lecm-stmeditor_startWaitForDocumentChange.title=Document change waiting
+lecm-stmeditor_model.property.lecm-stmeditor_takeUserWorkflow.title=Workflow start
+lecm-stmeditor_model.property.lecm-stmeditor_endTransitionAction.title=Finish workflow waiting
+lecm-stmeditor_model.property.lecm-stmeditor_startStartWorkflow.title=Start workflow on start state
+lecm-stmeditor_model.property.lecm-stmeditor_startScriptAction.title=Script execution on state start
+lecm-stmeditor_model.property.lecm-stmeditor_endStartWorkflow.title=Start workflow on state finish
+lecm-stmeditor_model.property.lecm-stmeditor_endScriptAction.title=Script execution on state finish
+
+lecm-stmeditor_model.property.lecm-stmeditor_scriptLabel.title=Title
+lecm-stmeditor_model.property.lecm-stmeditor_actiopnScript.title=Script
+
+
 listconstraint.lecm-stmeditor_variableSettingType.VARIABLE=Variable
 listconstraint.lecm-stmeditor_variableSettingType.VALUE=Value
