--- a/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
+++ b/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
@@ -13,3 +13,12 @@ statemachine.editor.form.label.inputWorkflowData=Input Data
 statemachine.editor.form.label.outputWorkflowData=Output Data
 statemachine.editor.form.label.workflows=Workflows
 statemachine.editor.form.label.expressions=Expressions
+
+statemachine.editor.form.info=Info
+statemachine.editor.form.behavior=Behavior
+statemachine.editor.form.actions=User Actions
+statemachine.editor.form.events=Event Handlers
+
+lecm-stmeditor_statusTransitionType=Transition Type
+lecm-stmeditor_statusExpression=Expression
+lecm-stmeditor_statusTarget=Status
