Снятие с основной должности возможно только если нет других должностей
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@731 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.staff-list.grid.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.staff-list.grid.get.properties
@@ -3,9 +3,10 @@ message.delete.unit.failure.has.children=Cannot delete unit. It has children uni
 message.delete.unit.failure.has.composition=Cannot delete unit. It has employeeys in compositions
 message.delete.unit.error=Some error occured
 
-message.delete.staff-lest.failure.boss=Cannot delete position, while has another position in unit
+message.delete.staff-lest.failure.boss=Can't delete position while has another position in unit
 message.delete.staff-lest.error=Some error occured
 
+message.employee.position.delete.failure.primary=Can't delete primary position while has another positions
 
 label.column.select=Select
 label.column.actions=Actions
