удалил страницу со старыми настройками делегирования, не нужна она больше удалил старые файлы моделей данных
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@734 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/repo/src/main/config/messages/delegation.properties
+++ b/lecm-delegation/repo/src/main/config/messages/delegation.properties
@@ -1,37 +1,3 @@
-# <model name="lecm-ba:delegations">
-lecm-ba_delegations.title=Business Authority Delegation Model
-
-# <constraint name="lecm-ba:statusList">
-listconstraint.lecm-ba_statusList.NEW=new
-listconstraint.lecm-ba_statusList.ACTIVE=active
-listconstraint.lecm-ba_statusList.REVOKED=revoked
-listconstraint.lecm-ba_statusList.CLOSED=closed
-
-# <type name="lecm-ba:procuracy">
-lecm-ba_delegations.type.lecm-ba_procuracy.title=Procuracy to delegate
-lecm-ba_delegations.property.lecm-ba_dateUTCBegin.title=Start date
-lecm-ba_delegations.property.lecm-ba_dateUTCEnd.title=Expire date
-lecm-ba_delegations.property.lecm-ba_allFunctions.title=All functions
-lecm-ba_delegations.property.lecm-ba_comment.title=Comment and details
-lecm-ba_delegations.property.lecm-ba_canpropogate.title=Can propogate
-lecm-ba_delegations.property.lecm-ba_dateUTCRevoke.title=Revoke date
-lecm-ba_delegations.property.lecm-ba_status.title=Status
-lecm-ba_delegations.association.lecm-ba_fromEmployee.title=Delegating person
-lecm-ba_delegations.association.lecm-ba_toEmployee.title=Trustee person
-lecm-ba_delegations.association.lecm-ba_delegateRoles.title=Delegated roles
-lecm-ba_delegations.association.lecm-ba_parentProcuracy.title=Parent procuracy
-
-#<model name="lecm-br:businessRoleModel">
-lecm-br_business-role-model.title=Business Role Model
-
-#<type name="lecm-br:business-role-container">
-lecm-br_business-role-model.type.lecm-br_business-role-container.title=Collection of business roles
-lecm-br_business-role-model.association.lecm-br_business-role-assoc.title=Link to business role
-
-#<type name="lecm-br:business-role">
-lecm-br_business-role-model.type.lecm-br_business-role.title=Business role
-lecm-br_business-role-model.property.lecm-br_business-role-name.title=Business role name
-
 #<model name="lecm-d8n:delegationModel">
 lecm-d8n_delegation-model.title=Business Authority Delegation Model
 
@@ -44,17 +10,24 @@ listconstraint.lecm-d8n_delegation-opts-status-constraint.NOT_SET=delegation not
 
 #<type name="lecm-d8n:delegation-opts-container">
 lecm-d8n_delegation-model.type.lecm-d8n_delegation-opts-container.title=Collection of delegation options
-lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-assoc.title=Link to delegation options
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-assoc.title=Delegation options
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-assoc.description=Link to delegation options
 
 #<type name="lecm-d8n:procuracy">
 lecm-d8n_delegation-model.type.lecm-d8n_procuracy.title=Procuracy
-lecm-d8n_delegation-model.association.lecm-d8n_business-role-assoc.title=Link to business role
-lecm-d8n_delegation-model.association.lecm-d8n_trustee-assoc.title=Link to trustee employee
+lecm-d8n_delegation-model.association.lecm-d8n_business-role-assoc.title=Business role
+lecm-d8n_delegation-model.association.lecm-d8n_business-role-assoc.description=Link to business role
+lecm-d8n_delegation-model.association.lecm-d8n_trustee-assoc.title=Trustee employee
+lecm-d8n_delegation-model.association.lecm-d8n_trustee-assoc.description=Link to trustee employee
 
 #<type name="lecm-d8n:delegation-opts">
 lecm-d8n_delegation-model.type.lecm-d8n_delegation-opts.title=Delegation options
 lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-can-transfer-rights.title=Transfer rights to subordinate documents
 lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-can-delegate-all.title=Delegate all functions
 lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-status.title=Status
-lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-owner-assoc.title=Link to owner employee
-lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-procuracy-assoc.title=Link to procucaties
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-owner-assoc.title=owner employee
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-owner-assoc.description=Link to owner employee
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-procuracy-assoc.title=Procucaties
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-procuracy-assoc.description=Link to procucaties
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-trustee-assoc.title=Trustee employee
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-trustee-assoc.description=Link to trustee employee
