[~]Управление Основной Должностью в Сотруднике [~] добавлена валидация email для сотрудника
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@740 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -33,12 +33,20 @@ message.position.boss.failure=Make boss failed
 message.position.boss.title=Make boss
 message.position.boss.prompt=Make boss position {0}?
 
+message.position.primary.success=Make primary successfully
+message.position.primary.failure=Make primary failed
+
+message.position.primary.title=Make primary
+message.position.primary.prompt=Make position {0} primary?
+
 actions.addEmployee=Designate to the position
 actions.deleteEmployee=Remove from the position
 actions.makeBoss=Make boss
+actions.makePrimary=Make Primary
 
 button.employee.remove=Remove
 button.position.makeBoss=Make
+button.position.makePrimary=Make
 
 lecm-orgstr_employee-main-unit=Unit
 lecm-orgstr_employee-main-position=Position
@@ -46,3 +54,4 @@ lecm-orgstr_workforce-group=Work Group
 lecm-orgstr_staff-unit=Unit
 lecm-orgstr_boss=Boss
 lecm-orgstr_employee=Employee
+lecm-orgstr_primary-position=Is Primary
