--- a/lecm-delegation/repo/src/main/config/messages/delegation.properties
+++ b/lecm-delegation/repo/src/main/config/messages/delegation.properties
@@ -15,10 +15,10 @@ lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-assoc.description
 
 #<type name="lecm-d8n:procuracy">
 lecm-d8n_delegation-model.type.lecm-d8n_procuracy.title=Procuracy
-lecm-d8n_delegation-model.association.lecm-d8n_business-role-assoc.title=Business role
-lecm-d8n_delegation-model.association.lecm-d8n_business-role-assoc.description=Link to business role
-lecm-d8n_delegation-model.association.lecm-d8n_trustee-assoc.title=Trustee employee
-lecm-d8n_delegation-model.association.lecm-d8n_trustee-assoc.description=Link to trustee employee
+lecm-d8n_delegation-model.association.lecm-d8n_procuracy-business-role-assoc.title=Business role
+lecm-d8n_delegation-model.association.lecm-d8n_procuracy-business-role-assoc.description=Link to business role
+lecm-d8n_delegation-model.association.lecm-d8n_procuracy-trustee-assoc.title=Trustee employee
+lecm-d8n_delegation-model.association.lecm-d8n_procuracy-trustee-assoc.description=Link to trustee employee
 
 #<type name="lecm-d8n:delegation-opts">
 lecm-d8n_delegation-model.type.lecm-d8n_delegation-opts.title=Delegation options
