--- a/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
+++ b/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
@@ -2,7 +2,8 @@ header.delegation-list.description=Delegation list
 page.delegation-list.title=Delegation list
 page.delegation-list.filteredLabel=(content filtered)
 
-header.my-delegation-opts.label=Delegation options
+header.my-delegation-opts.label=Delegate authority
+header.my-delegation-opts.description=My delegation options
 page.delegation-opts.title=Delegation options
 page.delegation-opts.filteredLabel=(content filtered)
 
