--- a/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
+++ b/lecm-delegation/share/src/main/java/ru/it/lecm/delegation/form/form.properties
@@ -7,6 +7,7 @@ header.my-delegation-opts.description=My delegation options
 page.delegation-opts.title=Delegation options
 page.delegation-opts.filteredLabel=(content filtered)
 
+header.delegation.label=Delegation
 header.delegation.description=Delegation
 page.delegation.title=Delegation
 page.delegation.filteredLabel=(content filtered)
