--- a/lecm-dictionary/share/src/main/java/ru/it/lecm/dictionary/form/form.properties
+++ b/lecm-dictionary/share/src/main/java/ru/it/lecm/dictionary/form/form.properties
@@ -1,2 +1,5 @@
 logicecm.orgstructure.employee.workplace=Workplace
 logicecm.orgstructure.employee.person=Account
+
+header.dictionary.label=Dictionary
+header.dictionary.description=Dictionary
