--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -1,3 +1,6 @@
+header.orgstructure.label=Orgstructure
+header.orgstructure.description=Orgstructure
+
 page.orgstructure=Orgstructure
 page.organization=Organization
 page.org-positions=Positions
