[~] более правильное сообщение при сохранении [~] перевод для поля Тип документа [~] для Должностей убраны поля Имя в РП и Имя в ДП из датагрида
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@781 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/repo/src/main/config/messages/orgstructure.properties
+++ b/lecm-orgstructure/repo/src/main/config/messages/orgstructure.properties
@@ -112,6 +112,8 @@ lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-doc-series.ti
 lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-doc-series.description=Document Series
 lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-doc-number.title=Document Number
 lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-doc-number.description=Document Number
+lecm-orgstr_organizationStructure.association.lecm-orgstr_person-data-docType-assoc.title=Doc Type
+lecm-orgstr_organizationStructure.association.lecm-orgstr_person-data-docType-assoc.description=Doc Type
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_workGroup.title=Working Group
 lecm-orgstr_organizationStructure.type.lecm-orgstr_workGroup.description=Project
