--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.dictionary.grid.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.dictionary.grid.get.properties
@@ -16,6 +16,8 @@ message.delete.failure=Could not delete item
 message.duplicate.success=Item was duplicated
 message.duplicate.failure=Could not duplicate item
 message.version = Version:
+message.save.success=Data Item saved successfully
+message.save.failure=Could not save Data Item
 
 ## Drop-down Menus
 menu.select=Select
