Изменить название на русское в форме поиска по атрибутам
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@785 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/repo/src/main/config/messages/dictionary.properties
+++ b/lecm-dictionary/repo/src/main/config/messages/dictionary.properties
@@ -2,3 +2,5 @@ lecm-dic_dictionaryStructure.type.lecm-dic_dictionary.title=Dictionary
 lecm-dic_dictionaryStructure.type.lecm-dic_dictionary.description=Dictionary
 lecm-dic_dictionaryStructure.property.lecm-dic_description.title=Description
 lecm-dic_dictionaryStructure.property.lecm-dic_description.description=Description
+lecm-dic_dictionaryStructure.property.lecm-dic_active.description=Active
+lecm-dic_dictionaryStructure.property.lecm-dic_active.title=Active
