ALF-233: Поменять название кнопки добавления новой должности
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@787 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.toolbar.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.toolbar.get.properties
@@ -1,8 +1,13 @@
 button.new-row=New Item
 button.search=Search
 button.ex_search=Extend Search
-button.new-row-staff=New Item
+button.new-row-staff=New Staff
 label.new-row.title=Create New Item
+button.new-employee=New Employee
+button.new-work-group=New Work Group
+button.new-work-force=New Work Force
+button.new-position=New Position
+button.new-role=New Role
 
 message.new-row.success=Successfully added new item
 message.new-row.failure=Could not add new item to the Dictionary
