Добавлен Web-скрипт для получения ссылки на контейнер данных для модуля. Добавлено создание этого контейнера.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@792 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/repo/pom.xml
+++ b/lecm-calendar/repo/pom.xml
@@ -47,6 +47,12 @@
 			<scope>provided</scope>
 			<classifier>patched</classifier>
 		</dependency>
+	 <dependency>
+	  <groupId>org.slf4j</groupId>
+	  <artifactId>com.springsource.slf4j.api</artifactId>
+	  <version>1.6.1</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<scm>
