Оргструктура. Штатное расписание. Поправлено сообщение о снятии сотрудника с должности. Теперь в формате Вы уверены, что хотите снять сотрудника <ФИО> c должности <Должность> в подразделении <Подразделение>?"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@801 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -28,7 +28,7 @@ message.employee.position.delete.success=Employee successfully deleted
 message.employee.position.delete.failure=Employee delete failed
 
 message.employee.position.delete.title=Dismiss employee
-message.employee.position.delete.prompt=Dismiss Employee {0} from position {1}?
+message.employee.position.delete.prompt=Dismiss Employee {0} from position {1} in orgstructure {2}?
 
 message.position.boss.success=Make boss successfully
 message.position.boss.failure=Make boss failed
