ALF-277 - название колонки
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@815 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/repo/src/main/config/messages/orgstructure.properties
+++ b/lecm-orgstructure/repo/src/main/config/messages/orgstructure.properties
@@ -13,8 +13,8 @@ lecm-orgstr_organizationStructure.property.lecm-orgstr_element-short-name.descri
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_organization-element-member.title=Organization Element Member
 lecm-orgstr_organizationStructure.type.lecm-orgstr_organization-element-member.description=Organization Element Member
-lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-position-assoc.title=Position
-lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-position-assoc.description=Position
+lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-position-assoc.title=Role
+lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-position-assoc.description=Role
 lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-employee-assoc.title=Employee
 lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-employee-assoc.description=Employee
 
