Добавлен новый модуль "Подписки"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@844 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
 		<module>lecm-statemachine-editor</module>
 		<module>lecm-theme</module>
 	    <module>lecm-delegation</module>
+	    <module>lecm-subscriptions</module>
     </modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
