--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -187,6 +187,13 @@
 			<scope>runtime</scope>
 			<type>amp</type>
 		</dependency>
+        <dependency>
+            <groupId>ru.it.lecm.notifications</groupId>
+            <artifactId>notifications-repo</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
 	</dependencies>
 
 	<build>
