Новый модуль "Бизнес Журнал"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@849 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
 	    <module>lecm-delegation</module>
 	    <module>lecm-subscriptions</module>
         <module>lecm-notifications</module>
+        <module>lecm-business-journal</module>
     </modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
