--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -149,6 +149,13 @@
             <type>amp</type>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.business-journal</groupId>
+            <artifactId>business-journal-share</artifactId>
+            <version>${platform.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
