ALF-278: Добавлен справочник "Типы доставки уведомлений"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@851 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-subscriptions/repo/src/main/config/messages/subscriptions.properties
+++ b/lecm-subscriptions/repo/src/main/config/messages/subscriptions.properties
@@ -12,3 +12,5 @@ lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-organizat
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-organization-unit-assoc.description=Organization unit
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-work-group-assoc.title=Work group
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-work-group-assoc.description=Work group
+lecm-subscr_subscriptionsStructure.association.lecm-subscr_notification-type-assoc.title=Notification type
+lecm-subscr_subscriptionsStructure.association.lecm-subscr_notification-type-assoc.description=Notification type
